# pygame-menu

./: .replit  CONTRIBUTORS.md  codecov.yml  make_package.py  pyproject.toml
pygame_menu/: __init__.py
pygame_menu/widgets/widget/: surface.py
test/: test_widget_surface.py
